13--k8s-clusterip-ingress/foo-server--namespace.yaml
# -------------------
# yaml configuration to define a namespace
# -------------------

apiVersion: v1
kind: Namespace
metadata:
  name:  foo-nspace
